# petaly

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  build_package.txt  deployment.sh  install.txt  pyproject.toml  requirements.txt  requirements_2.txt  set_environment.sh  setup.py
docs/tutorial/: petaly_design_principles.md  petaly_init_workspace.md  petaly_install.md  pipeline_examples.md  pipeline_explained.md  run_pipeline.md
src/: requirements.txt
src/petaly/: __init__.py  __main__.py
src/petaly/cli/: cli.py  cli_cleanup.py  cli_initializer.py  cli_menu.py  cli_visualizer.py
src/petaly/connectors/: type_mapping.md
src/petaly/connectors/aws/redshift/: metadata.sql  rs_connector.py  rs_extractor.py  rs_loader.py
src/petaly/connectors/aws/redshift/config/: connector_attributes.json  extract_to_stmt.sql  extractor_type_transformer.json.examples  load_from_stmt.sql  load_from_stmt.sql.test
src/petaly/connectors/aws/s3/: s3_connector.py  s3_extractor.py  s3_loader.py
src/petaly/connectors/bigquery/: bq_connector.py  bq_extractor.py  bq_loader.py  metadata.sql
src/petaly/connectors/bigquery/config/: connector_attributes.json  extract_to_stmt.sql  load_from_stmt.sql
src/petaly/connectors/bigquery/type_mapping/: postgres.json
src/petaly/connectors/csv/: csv_connector.py  csv_extractor.py  csv_loader.py
src/petaly/connectors/csv/config/: connector_attributes.json
src/petaly/connectors/csv/type_mapping/: bigquery.json  csv.json  mysql.json  postgres.json  redshift.json
src/petaly/connectors/gcp/bigquery/: bq_connector.py  bq_extractor.py  bq_loader.py
src/petaly/connectors/gcp/gs/: gs_connector.py  gs_extractor.py  gs_loader.py
src/petaly/connectors/mysql/: metadata.sql  mysql_connector.py  mysql_extractor.py  mysql_loader.py
src/petaly/connectors/mysql/config/: connector_attributes.json  create_table_stmt.sql  depreacted_database_attributes.json  extract_to_outfile_stmt.sql  extract_to_stmt.sql  load_from_stmt.sql
src/petaly/connectors/mysql/type_mapping/: bigquery.json  csv.json  mysql.json  postgres.json  redshift.json
src/petaly/connectors/postgres/: metadata.sql  psql_connector.py  psql_extractor.py  psql_loader.py
src/petaly/connectors/postgres/config/: connector_attributes.json  create_table_stmt.sql  deprecated_database_attributes.json  extract_to_stmt.sql  load_from_stmt.sql
src/petaly/connectors/postgres/type_mapping/: bigquery.json  mysql.json  redshift.json
src/petaly/core/: composer.py  data_object.py  db_extractor.py  db_loader.py  f_extractor.py  f_loader.py  main_ctl.py  object_metadata.py  pipeline.py  type_mapping.py
src/petaly/sysconfig/: load_class.py  logger.py  main_config.py
src/petaly/sysconfig/config/: class_config.json  logging_config.json  pipeline_meta_config.json  pipeline_outdated_arguments.json  template_petaly.ini
src/petaly/utils/: file_handler.py  utils.py
tests/unittest/: basic_test.py
(+12 files in other folders)
